welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:16: error: not found: value x
	setPos(x,y+1)
               ^